--- a/assets/control.css
+++ b/assets/control.css
@@ -5,7 +5,7 @@
 
 .power rect {
     fill: #ffffff;
-    fill-opacity: 1;
+    fill-opacity: 0;
 }
 
 .power text {
@@ -22,6 +22,11 @@
 
 .digital rect.pin {
     fill: #ffffff;
+    fill-opacity: 1;
+}
+
+.digital.off rect.pin {
+    fill: #9f9f9f;
     fill-opacity: 1;
 }
 
