--- a/assets/control.css
+++ b/assets/control.css
@@ -67,6 +67,20 @@ text {
 }
 
 pre, code, kbd, samp, tt{
-  font-family: "Lucida Console", Courier, monospace;
-  font-size:1em;
+    font-family: "Lucida Console", Courier, monospace;
+    font-size:1em;
+}
+
+pre {
+    width: 80%;
+    max-height: 400px;
+    color: #444;
+    padding: 10px;
+    background: #eee;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    word-wrap: normal;
+    overflow: auto;
+    white-space: pre;
+    font-size: 0.8em;
 }
