--- a/assets/control.css
+++ b/assets/control.css
@@ -84,3 +84,15 @@ pre {
     white-space: pre;
     font-size: 0.8em;
 }
+
+.editor {
+    margin: 0;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 80%;
+    height: 100px;
+}
+
