CCWU: fixed blog's margins and paddings.

--- a/assets/control.css
+++ b/assets/control.css
@@ -96,3 +96,17 @@ pre {
     height: 100px;
 }
 
+.botnana-blog {
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.botnana-post {
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.botnana-post header h1 {
+    margin-bottom: 0;
+}
+
