--- a/assets/blog.css
+++ b/assets/blog.css
@@ -11,10 +11,25 @@
     padding: 1em 0px;
 }
 
+.botnana-blog article .thumb {
+    float: left;
+    margin: 0px 20px 10px 0px;
+}
+
+.botnana-blog article .thumb img {
+    width: 150px;
+    height: 150px;
+}
+
 .botnana-blog article h3 {
     font-size: 1.75em;
     margin: 0px;
     padding: 0px;
+    color: #4E5E6A;
+}
+
+.botnana-blog article a {
+    color: #4E5E6A;
 }
 
 .botnana-blog article p {
@@ -22,6 +37,12 @@
     margin: 0px 0px;
     font-size: 0.825em;
     font-weight: bold;
+    color: #9DA8B0;
+}
+
+.botnana-blog article .clr {
+    float: none;
+    clear: both;
 }
 
 .botnana-blog h3 a {
