CCWU: css for thumb.

--- a/assets/blog.css
+++ b/assets/blog.css
@@ -70,3 +70,13 @@
     margin-bottom: 0;
 }
 
+.botnana-post .thumb {
+    float: left;
+    width: 50%;
+    margin: 0px 20px 10px 0px;
+}
+
+.botnana-post .thumb img {
+    max-width: 100%;
+}
+
