CCWU: upgraded to latest blog-view.

--- a/assets/blog.css
+++ b/assets/blog.css
@@ -40,6 +40,11 @@
     color: #9DA8B0;
 }
 
+.botnana-blog article input {
+    float: right;
+    visibility: hidden;
+}
+
 .botnana-blog article .clr {
     float: none;
     clear: both;
